# patterns

./: .gitignore  LICENSE
GoF/factory_method/: factory_method.cc
Head_first_design_patterns/: README.md
Head_first_design_patterns/abstract_factory/: CMakeLists.txt  abstract_factory.cc
Head_first_design_patterns/factory_method/: CMakeLists.txt
